--- a/package.json
+++ b/package.json
@@ -1,32 +1,54 @@
 {
   "name": "bcra-exchange",
-  "version": "0.1",
-  "description": "A wrapper for the BCRA API to get official exchange rates by date",
+  "version": "0.0.7",
+  "description": "A crawler for the BCRA (Banco Central de la República Argentina) frontend to get official exchange rates by date",
   "type": "module",
-  "types": "types.d.ts",
-  "files": ["/build"],
-  "main": "build/index.js",
+  "types": "build/main.d.ts",
+  "files": [
+    "/build"
+  ],
+  "exports": {
+    ".": {
+      "import": "./build/main.js",
+      "require": "./build/main.cjs",
+      "default": "./build/main.js",
+      "types": "./build/main.d.ts"
+    }
+  },
+  "main": "build/main.js",
+  "module": "build/main.js",
   "scripts": {
     "test": "vitest --watch",
-    "start": "node --loader ts-node/esm src/main.ts",
     "test:ui": "vitest --ui",
-    "build": "tsc -p tsconfig.prod.json",
+    "build": "tsup src/main.ts --dts --format cjs,esm --clean --minify --out-dir build",
     "prepare": "npm run build"
   },
-  "keywords": [],
+  "keywords": [
+    "bcra",
+    "exchange",
+    "rate",
+    "cambio",
+    "banco",
+    "central",
+    "argentina",
+    "peso",
+    "dolar",
+    "dólar",
+    "euro"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "jsdom": "^22.0.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.61",
     "@types/jsdom": "^21.1.1",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "@vitest/ui": "^0.31.1",
     "eslint": "^8.41.0",
-    "ts-node-dev": "^2.0.0",
-    "ts-node": "^10.9.1",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.4",
     "vitest": "^0.31.1"
   }
