--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -2,6 +2,7 @@
     "extends": "./tsconfig.json",
     "exclude": [
         "src/test.ts",
-        "**/*.test.ts"
+        "**/*.test.ts",
+        "build/**/*",
     ]
 }
