--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,8 +1,8 @@
 {
     "extends": "./tsconfig.json",
     "exclude": [
-        "src/test.ts",
         "**/*.test.ts",
         "build/**/*",
+        "src/collectCurrencies.ts"
     ]
 }
