--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "vitest --watch",
     "test:ui": "vitest --ui",
     "build": "tsup src/main.ts --dts --format cjs,esm --clean --minify --out-dir build",
-    "prepare": "npm run collect && npm run build"
+    "prepublishOnly": "npm run collect && npm run build"
   },
   "keywords": [
     "bcra",
@@ -39,9 +39,6 @@
   ],
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "jsdom": "^22.0.0"
-  },
   "devDependencies": {
     "@swc/core": "^1.3.61",
     "@types/jsdom": "^21.1.1",
@@ -49,6 +46,7 @@
     "@typescript-eslint/parser": "^5.59.7",
     "@vitest/ui": "^0.31.1",
     "eslint": "^8.41.0",
+    "jsdom": "^22.1.0",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4",
     "vitest": "^0.31.1"
