--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bcra-exchange",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "A crawler for the BCRA (Banco Central de la República Argentina) frontend to get official exchange rates by date",
   "type": "module",
   "types": "build/main.d.ts",
@@ -39,6 +39,11 @@
   ],
   "author": "",
   "license": "MIT",
+  "repository": {
+    "type": "github:user/repo",
+    "url": "https://github.com/jlannoo/bcra-exchange"
+  },
+  "homepage": "https://github.com/jlannoo/bcra-exchange#readme",
   "devDependencies": {
     "@swc/core": "^1.3.61",
     "@types/jsdom": "^21.1.1",
