--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "module": "build/main.js",
   "scripts": {
     "collect": "node --loader ts-node/esm src/collectCurrencies.ts",
-    "test": "vitest --watch",
-    "test:ui": "vitest --ui",
+    "test": "vitest --watch --coverage",
+    "test:ui": "vitest --ui --coverage",
+    "test:coverage": "npx serve coverage",
     "build": "tsup src/main.ts --dts --format cjs,esm --clean --minify --out-dir build",
     "prepublishOnly": "npm run collect && npm run build"
   },
@@ -49,6 +50,7 @@
     "@types/jsdom": "^21.1.1",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
+    "@vitest/coverage-istanbul": "^0.31.2",
     "@vitest/ui": "^0.31.1",
     "eslint": "^8.41.0",
     "jsdom": "^22.1.0",
